[package]
name = "plygui-cocoa"
version = "0.0.1"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
edition = "2018"

[lib]
name = "plygui_cocoa"
path = "src/lib.rs"

#[target.'cfg(target_os = "macos")'.dependencies]
[dependencies]
plygui-api = {version = "0.0.1", path = "../plygui-api"}
cocoa = {version = "~0.18"}
core-graphics = {version = "~0.17"}
core-foundation = {version = "~0.6"}
objc = {version = "~0.2"}
dispatch = {version = "0.1.4"}
block = {version = "~0.1"}
lazy_static = "~0.2"
derive_builder = "~0.5"

[features]
markup = ["plygui-api/markup"]