[package]
name = "plygui-cocoa"
version = "0.0.1"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
edition = "2018"

[lib]
name = "plygui_cocoa"
path = "src/lib.rs"

#[target.'cfg(target_os = "macos")'.dependencies]
[dependencies]
plygui-api = {version = "0.0.1", path = "../plygui/api"}
cocoa = {version = "~0.20"}
core-graphics = {version = "~0.19"}
core-foundation = {version = "~0.7"}
objc = {version = "~0.2"}
dispatch = {version = "~0.2"}
block = {version = "~0.1"}
lazy_static = "~1.4"
derive_builder = "~0.9"

[features]
markup = ["plygui-api/markup"]